Horizontal scroll fix 11

--- a/style.css
+++ b/style.css
@@ -24,8 +24,6 @@ header {
 
 form {
     margin-top: 1rem;
-    width: 100%;
-
 }
 
 label, button {
